--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
@@ -22,5 +22,46 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  font-feature-settings: 'rlig' 1, 'calt' 1;
+  font-synthesis-weight: none;
+  text-rendering: optimizeLegibility;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('/font/HelveticaNeueMedium.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Helvetica';
+  src: url('/font/HelveticaNeueBold.otf') format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@keyframes animation {
+  0%,
+  100% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
+@keyframes shine {
+  0% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: -100%;
+  }
+}
+
+@theme {
+  --animate-shine: shine 5s linear infinite;
 }
