--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,3 +65,19 @@ body {
 @theme {
   --animate-shine: shine 5s linear infinite;
 }
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+text {
+  animation: rotate 20s linear infinite;
+  transform-origin: 50% 50%;
+  fill: rgb(255, 255, 255);
+  font-size: 17px;
+}
